Update hero section text

--- a/nahbah-frontend/src/i18n/locales/en/home.json
+++ b/nahbah-frontend/src/i18n/locales/en/home.json
@@ -5,9 +5,9 @@
     "titleHighlight": "CREATIVES",
     "concept1": "ARCHITECTURE",
     "concept2": "CREATIVITY",
-    "description": "A home is more than just shelter—it's a place of stability, privacy, and community. This initiative supports those creating their own homes in difficult circumstances by providing a platform for sharing designs.",
-    "learnMoreBtn": "LEARN MORE",
-    "viewDesignsBtn": "VIEW DESIGNS"
+    "description": "A home is more than just shelter — it's a place of stability, privacy, and community. By providing a platform for sharing designs, our initiative supports people creating their own homes in difficult circumstances.",
+    "learnMoreBtn": "ABOUT US",
+    "viewDesignsBtn": "DESIGNS"
   },
   "features": {
     "title": "What We Offer",
