--- a/nahbah-frontend/src/i18n/locales/hu/home.json
+++ b/nahbah-frontend/src/i18n/locales/hu/home.json
@@ -2,10 +2,10 @@
   "hero": {
     "imageAlt": "Kreatív lakásbelső",
     "titlePart1": "ÚTMUTATÓ",
-    "titleHighlight": "KREATÍVOKNAK", 
+    "titleHighlight": "KREATÍVOKNAK",
     "concept1": "ÉPÍTÉSZET",
     "concept2": "KREATIVITÁS",
-    "description": "Az otthon több mint puszta menedék—ez a stabilitás, a magánélet és a közösség helye. Ez a kezdeményezés támogatja azokat, akik nehéz körülmények között építik saját otthonukat, platformot biztosítva a tervek megosztásához.",
+    "description": "Az otthon több mint puszta menedék - a stabilitás, a magánélet és a közösség helye. Ez a kezdeményezés azokat támogatja, akik nehéz körülmények között a saját otthonukat hozzák létre, és ehhez egy olyan platformot biztosít, ahol megoszthatják terveiket és tapasztalataikat és használhatják mások ötleteit.",
     "learnMoreBtn": "TUDJ MEG TÖBBET",
     "viewDesignsBtn": "TERVEK MEGTEKINTÉSE"
   },
